objects/TW1_Caixa__c.object
<CustomObject>
    <fields>
        <fullName>TW1_CxFechado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CaixaFechado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TW1_Data_de_Abertura__c</fullName>
        <label>Data de Abertura</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Operador__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Operador</label>
        <referenceTo>TW1_Operador__c</referenceTo>
        <relationshipLabel>Caixas</relationshipLabel>
        <relationshipName>Caixas</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Valor_Fechamento_Sum__c</fullName>
        <label>Valor de Fechamento</label>
        <summarizedField>TW1_Extrato__c.TW1_Valor__c</summarizedField>
        <summaryFilterItems>
            <field>TW1_Extrato__c.TW1_Tipo__c</field>
            <operation>equals</operation>
            <value>Valor do Fechamento</value>
        </summaryFilterItems>
        <summaryForeignKey>TW1_Extrato__c.TW1_Caixa__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TW1_Valor_Total_Sum__c</fullName>
        <label>Valor Total</label>
        <summarizedField>TW1_Extrato__c.TW1_Valor__c</summarizedField>
        <summaryFilterItems>
            <field>TW1_Extrato__c.TW1_Tipo__c</field>
            <operation>equals</operation>
            <value>Valor do Brinde</value>
        </summaryFilterItems>
        <summaryForeignKey>TW1_Extrato__c.TW1_Caixa__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TW1_Valor_de_Abertura_Sum__c</fullName>
        <label>Valor de Abertura</label>
        <summarizedField>TW1_Extrato__c.TW1_Valor__c</summarizedField>
        <summaryFilterItems>
            <field>TW1_Extrato__c.TW1_Tipo__c</field>
            <operation>equals</operation>
            <value>Valor de Abertura</value>
        </summaryFilterItems>
        <summaryForeignKey>TW1_Extrato__c.TW1_Caixa__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Caixa</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>TW1_Operador__c</columns>
        <columns>TW1_Valor_de_Abertura_Sum__c</columns>
        <columns>TW1_Valor_Fechamento_Sum__c</columns>
        <columns>TW1_Valor_Total_Sum__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Caixas</label>
    </listViews>
    <nameField>
        <label>Nome de Caixa</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Caixas</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>